--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node ./src/app.js",
     "dev": "env-cmd -f ./config/dev.env node src/app.js"
   },
+  "engines": {
+    "node": "16.9.0",
+    "npm": "7.21.1"
+  },
   "author": "Alek Atanasoski",
   "license": "ISC",
   "dependencies": {
